fix spacing issue

--- a/extensions/blocks/calendly/editor.scss
+++ b/extensions/blocks/calendly/editor.scss
@@ -18,6 +18,10 @@
 		display: flex;
 		margin-bottom: 1em;
 	}
+
+	&-learn-more {
+		margin-top: 1em;
+	}
 }
 
 
